fixed spacing

--- a/Home.css
+++ b/Home.css
@@ -461,7 +461,7 @@
 }
 
 .u-section-5 .u-sheet-1 {
-  min-height: 1298px;
+  min-height: 688px;
 }
 
 .u-section-5 .u-shape-1 {
@@ -473,7 +473,7 @@
 
 .u-section-5 .u-layout-wrap-1 {
   width: 1095px;
-  margin: -578px auto 60px;
+  margin: -578px auto 50px;
 }
 
 .u-section-5 .u-image-1 {
